fix: (sidemenu) added z-index per specification

--- a/components/src/patterns/side-menu/side-menu.scss
+++ b/components/src/patterns/side-menu/side-menu.scss
@@ -1,6 +1,6 @@
-@import '@scania/typography/dist/scss/mixins';
-@import '@scania/typography/dist/scss/tokens';
-@import '@scania/grid/dist/scss/grid.scss';
+@import "@scania/typography/dist/scss/mixins";
+@import "@scania/typography/dist/scss/tokens";
+@import "@scania/grid/dist/scss/grid.scss";
 
 /* HEADER ICON. KINDA WANT THIS IN THE HEADER COMPONENT INSTEAD? */
 
@@ -35,7 +35,7 @@
     background-color: var(--sdds-grey-50);
 
     &::after {
-      content: ' ';
+      content: " ";
       display: block;
       position: absolute;
       top: -1px;
@@ -71,6 +71,7 @@
     width: 288px;
     position: relative;
     border-right: 1px solid var(--sdds-grey-300);
+    z-index: 30;
 
     @media all and (max-width: $grid-md) {
       position: absolute;
@@ -91,7 +92,7 @@
       }
 
       &::after {
-        content: ' ';
+        content: " ";
         position: absolute;
         background: var(--sdds-black);
         opacity: 0;
@@ -204,7 +205,7 @@
       border-bottom: 1px solid var(--sdds-grey-300);
 
       &-link {
-        @include type-style('headline-07');
+        @include type-style("headline-07");
         @include item-states;
 
         color: var(--sdds-grey-958);
@@ -243,7 +244,7 @@
         position: relative;
 
         &::before {
-          content: ' ';
+          content: " ";
           position: absolute;
           left: 0;
           top: 0;
@@ -263,7 +264,7 @@
 
       &__item {
         .sdds-sidebar-nav__item-link {
-          @include type-style('detail-02');
+          @include type-style("detail-02");
           @include item-states;
 
           color: var(--sdds-grey-800);
@@ -271,26 +272,28 @@
           display: block;
           padding: 16px 24px 16px 56px;
           white-space: nowrap;
-          transition: opacity 0.15s ease-in-out,
+          transition:
+ opacity 0.15s ease-in-out,
             background-color 0.15s ease-in-out;
           font-weight: normal;
           min-height: auto;
 
           .sdds-sidebar-nav__item-text {
-            @include type-style('detail-02');
+            @include type-style("detail-02");
 
             transition: opacity 0.15s ease-in-out, height 0.15s ease-in-out;
           }
         }
 
         .sdds-sidebar-nav__item-title {
-          @include type-style('detail-02');
+          @include type-style("detail-02");
 
           color: var(--sdds-grey-958);
           text-decoration: none;
           padding: 16px 24px 16px 56px;
           white-space: nowrap;
-          transition: opacity 0.15s ease-in-out,
+          transition:
+ opacity 0.15s ease-in-out,
             background-color 0.15s ease-in-out;
           min-height: auto;
           font-weight: 600;
@@ -300,7 +303,7 @@
 
       .sdds-item--active {
         .sdds-sidebar-nav__item-link {
-          @include type-style('headline-07');
+          @include type-style("headline-07");
 
           color: var(--sdds-grey-958);
         }
